crates/ink/tests/ui/contract/fail/message-returns-non-codec.stderr
error[E0277]: the trait bound `NonCodecType: WrapperTypeEncode` is not satisfied
  --> tests/ui/contract/fail/message-returns-non-codec.rs:16:34
   |
16 |         pub fn message(&self) -> NonCodecType {
   |                                  ^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodecType`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             Box<T>
             Cow<'a, T>
             ink::parity_scale_codec::Ref<'a, T, U>
             Rc<T>
             Arc<T>
             Vec<T>
             String
             &T
             &mut T
   = note: required for `NonCodecType` to implement `Encode`
note: required by a bound in `DispatchOutput`
  --> src/codegen/dispatch/type_check.rs
   |
   | pub struct DispatchOutput<T>(T)
   |            -------------- required by a bound in this struct
   | where
   |     T: scale::Encode + 'static;
   |        ^^^^^^^^^^^^^ required by this bound in `DispatchOutput`

error[E0277]: the trait bound `Result<NonCodecType, LangError>: Encode` is not satisfied
  --> tests/ui/contract/fail/message-returns-non-codec.rs:16:9
   |
16 |         pub fn message(&self) -> NonCodecType {
   |         ^^^ the trait `Encode` is not implemented for `Result<NonCodecType, LangError>`
   |
   = help: the trait `Encode` is implemented for `Result<T, E>`
note: required by a bound in `return_value`
  --> $WORKSPACE/crates/env/src/api.rs
   |
   | pub fn return_value<R>(return_flags: ReturnFlags, return_value: &R)
   |        ------------ required by a bound in this function
   | where
   |     R: scale::Encode,
   |        ^^^^^^^^^^^^^ required by this bound in `return_value`

error[E0599]: the method `try_invoke` exists for struct `CallBuilder<DefaultEnvironment, Set<Call<DefaultEnvironment>>, Set<ExecutionInput<...>>, ...>`, but its trait bounds were not satisfied
  --> tests/ui/contract/fail/message-returns-non-codec.rs:16:9
   |
4  |     pub struct NonCodecType;
   |     ----------------------- doesn't satisfy `NonCodecType: ink::parity_scale_codec::Decode`
...
16 |         pub fn message(&self) -> NonCodecType {
   |         ^^^ method cannot be called due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `NonCodecType: ink::parity_scale_codec::Decode`
note: the trait `ink::parity_scale_codec::Decode` must be implemented
  --> $CARGO/parity-scale-codec-3.6.5/src/codec.rs
   |
   | pub trait Decode: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^^
